Display product information in main catalog

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
           {
             "devDependencies": true
           }
-        ]
+        ],
+        "react/jsx-no-useless-fragment": "off"
       }
     }
   ],
