--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "browser": true,
     "es2021": true
   },
+  "parser": "@babel/eslint-parser",
   "extends": ["plugin:react/recommended", "airbnb", "eslint:recommended"],
   "overrides": [
     {
@@ -20,7 +21,10 @@
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+   }
   },
   "plugins": ["react"],
   "settings": {
