--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,13 +9,14 @@
     {
       "files": ["*.js", "*.jsx"],
       "rules": {
-        "import/no-extraneous-dependencies": [
-          "error",
-          {
-            "devDependencies": true
-          }
-        ],
-        "react/jsx-no-useless-fragment": "off"
+        // "import/no-extraneous-dependencies": [
+        //   "error",
+        //   {
+        //     "devDependencies": true
+        //   }
+        // ],
+        "react/jsx-no-useless-fragment": "off",
+        "import/no-extraneous-dependencies": "off"
       }
     }
   ],
