--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
         //   }
         // ],
         "react/jsx-no-useless-fragment": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "arrow-body-style":"off"
       }
     }
   ],
