--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.15.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
