Add Redux store

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,9 @@
       "namedComponents": "arrow-function",
       "unnamedComponents": "arrow-function"
     }],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "space-in-parens": 0,
+    "indent": 0,
+    "default-param-last": 0
   }
 }
